Finalização do projeto Bertoti